add images to img/ and .white-spy and .black-spy to index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
   <body>
     <h1>Cipher</h1>
 
+    <div class="image-container">
+      <img class="white-spy" src="img/whiteSpy.jpg" alt="White Spy">
+      <img class="black-spy" src="img/blackSpy.jpg" alt="Black Spy">
+    </div>
+
   </body>
 </html>
